--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href=" " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bluefin - The next generation workstation</title>
+
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+    <meta name="title" content="Bluefin">
+    <meta name="description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
+    <meta name="keywords" content="linux, gnome, fedora, ubuntu, cloudnative">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="author" content="The Bluefin Project">
+
+    <meta property="og:title" content="Bluefin">
+    <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://aaronlake.github.io/bluefin-website/" />
+    <!-- <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:image" content="/og2.jpg" />
+    <meta property="og:site_name" content="Bluefin"> -->
   </head>
   <body>
     <div id="app"></div>
