--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href=" " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
+    <title>Bluefin | The Next Generation Linux Workstation</title>
     <meta name="title" content="Bluefin">
     <meta name="description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
     <meta name="keywords" content="linux, gnome, fedora, ubuntu, cloudnative">
@@ -19,10 +16,11 @@
     <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://aaronlake.github.io/bluefin-website/" />
-    <!-- <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="600" />
-    <meta property="og:image" content="/og2.jpg" />
-    <meta property="og:site_name" content="Bluefin"> -->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/site.webmanifest">
   </head>
   <body>
     <div id="app"></div>
