--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Bluefin">
     <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aaronlake.github.io/bluefin-website/" />
+    <meta property="og:url" content="https://projectbluefin.io" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
