--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <meta property="og:title" content="Bluefin">
     <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
+    <meta property="og:image" content="/meta.png"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://projectbluefin.io" />
 
