--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Bluefin | The Next Generation Linux Workstation</title>
-    <meta name="title" content="Bluefin">
-    <meta name="description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
+    <meta name="title" content="Bluefin | The Next Generation Linux Workstation">
+    <meta name="description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
     <meta name="keywords" content="linux, gnome, fedora, ubuntu, cloudnative">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="author" content="The Bluefin Project">
-
+    
+    <meta property="og:url" content="https://projectbluefin.io/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Bluefin">
-    <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.  ">
-    <meta property="og:image" content="/meta.png"/>
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://projectbluefin.io" />
+    <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
+    <meta property="og:image" content="https://projectbluefin.io/meta.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="projectbluefin.io">
+    <meta property="twitter:url" content="https://projectbluefin.io/">
+    <meta name="twitter:title" content="Bluefin">
+    <meta name="twitter:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
+    <meta name="twitter:image" content="https://projectbluefin.io/meta.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
