Remove unneeded title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Bluefin | The Next Generation Linux Workstation</title>
-    <meta name="title" content="Bluefin | The Next Generation Linux Workstation">
+    
+    <meta name="title" content="Bluefin">
     <meta name="description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
     <meta name="keywords" content="linux, gnome, fedora, ubuntu, cloudnative">
     <meta name="robots" content="index, follow">
