--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bluefin | The Next Generation Linux Workstation</title>
     
     <meta name="title" content="Bluefin">
-    <meta name="description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
+    <meta name="description" content="The next generation cloud-native Linux workstation, designed for reliability, performance, and sustainability.">
     <meta name="keywords" content="linux, gnome, fedora, ubuntu, cloudnative">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://projectbluefin.io/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Bluefin">
-    <meta property="og:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
+    <meta property="og:description" content="The next generation cloud-native Linux workstation, designed for reliability, performance, and sustainability.">
     <meta property="og:image" content="https://projectbluefin.io/meta.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="projectbluefin.io">
     <meta property="twitter:url" content="https://projectbluefin.io/">
     <meta name="twitter:title" content="Bluefin">
-    <meta name="twitter:description" content="The next generation Linux workstation, designed for reliability, performance, and sustainability.">
+    <meta name="twitter:description" content="The next generation cloud-native Linux workstation, designed for reliability, performance, and sustainability.">
     <meta name="twitter:image" content="https://projectbluefin.io/meta.png">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
