--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="manifest" href="/favicons/site.webmanifest">
+    <script type="text/javascript" src="https:///universal-blue.discourse.group/javascripts/embed-topics.js"></script>
     <script async src="https://analytics.eu.umami.is/script.js" data-website-id="6f6ea63d-01c2-4539-b84b-fd455210ddcf"></script>
   </head>
   <body>
