--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="author" content="The Bluefin Project">
+    <meta name="theme-color" content="#4285f4">
     
     <meta property="og:url" content="https://projectbluefin.io/">
     <meta property="og:type" content="website">
