--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="manifest" href="/favicons/site.webmanifest">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.9/iframeResizer.min.js" integrity="sha512-+bpyZqiNr/4QlUd6YnrAeLXzgooA1HKN5yUagHgPSMACPZgj8bkpCyZezPtDy5XbviRm4w8Z1RhfuWyoWaeCyg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="https:///universal-blue.discourse.group/javascripts/embed-topics.js"></script>
     <script async src="https://analytics.eu.umami.is/script.js" data-website-id="6f6ea63d-01c2-4539-b84b-fd455210ddcf"></script>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script type="text/javascript">
+      window.addEventListener('load', function () {
+        iFrameResize({ log: false }, '#image-picker');
+      })
+    </script>
   </body>
 </html>
