Remove framework image, fix mobile styles

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -153,6 +153,21 @@
         .questions,
         .download-link {
           width:100%;
+          text-align:center;
+        }
+
+        .download-link {
+          margin-top:30px;
+        }
+
+        .select {
+          left: 0;
+          right: 0;
+          margin: auto;
+            margin-top: auto;
+            margin-bottom: auto;
+          margin-bottom: 30px;
+          margin-top: 10px;
         }
       }
     </style>
@@ -167,7 +182,7 @@
               <option disabled selected value>Select your hardware</option>
               <option value="desktop">Desktop</option>
               <optgroup label="Laptops">
-                <option value="framework">Framework Laptop</option>
+                <option value="desktop">Framework Laptop</option>
                 <option value="surface">Surface Laptop</option>
                 <option value="asus">ASUS Laptop</option>
                 <option value="desktop">Other Laptop</option>
