Add fallback font

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -21,7 +21,7 @@
       }
 
       html * {
-        font-family: 'Inter';
+        font-family: 'Inter', 'sans-serif';
         color: #fff;
         font-weight: 400;
       }
