Set select to 100% width on mobile

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -166,6 +166,7 @@
           margin: auto;
           margin-bottom: 30px;
           margin-top: 10px;
+          width: 100%;
         }
       }
     </style>
