Hide extra buttons on mobile

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -168,6 +168,12 @@
           margin-top: 10px;
           width: 100%;
         }
+
+        .sha256,
+        .ghcr-details {
+          display: none;
+          visibility: hidden;
+        }
       }
     </style>
   </head>
