Add min-width to select

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -52,6 +52,7 @@
         overflow: hidden;
         margin-bottom: 15px;
         margin-top: 5px;
+        min-width: 350px;
       }
 
       .select::after {
