--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -34,9 +34,10 @@
         flex: 1;
         padding: 0 1em;
         color: #fff;
-        background-color: #333;
-        background-image: none;
         cursor: pointer;
+        border: 1px solid #616161;
+        border-radius: 20px;
+        background: #0c1016;
       }
 
       select::-ms-expand {
@@ -48,7 +49,6 @@
         display: flex;
         width: 20em;
         height: 3em;
-        border-radius: .25em;
         overflow: hidden;
         margin-bottom: 15px;
         margin-top: 5px;
@@ -56,7 +56,8 @@
       }
 
       .select::after {
-        content: '\25BC';
+        font-family: 'Font Awesome 5 Free';
+        content: '\f078';
         position: absolute;
         top: 0;
         right: 0;
@@ -65,6 +66,8 @@
         transition: .25s all ease;
         pointer-events: none;
         color: #ccc;
+        border-top-right-radius: 25px;
+        border-bottom-right-radius: 25px;
       }
 
       .select:hover::after {
