--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -53,6 +53,7 @@
         margin-bottom: 15px;
         margin-top: 5px;
         min-width: 350px;
+        overflow:visible;
       }
 
       .select::after {
@@ -60,9 +61,9 @@
         content: '\f078';
         position: absolute;
         top: 0;
-        right: 0;
-        padding: 1em;
-        background-color: rgb(66, 133, 244);
+        right: -3px;
+        padding: 15px;
+        background-color: rgb(108, 122, 233);
         transition: .25s all ease;
         pointer-events: none;
         color: #ccc;
