--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -63,12 +63,13 @@
         top: 0;
         right: -3px;
         padding: 15px;
-        background-color: rgb(108, 122, 233);
+        border: 1px solid rgb(108, 122, 233);
         transition: .25s all ease;
         pointer-events: none;
         color: #ccc;
         border-top-right-radius: 25px;
         border-bottom-right-radius: 25px;
+        background-color: #0c1016;
       }
 
       .select:hover::after {
@@ -251,6 +252,7 @@
           <span class="fine-print">Check out the <a href="https://universal-blue.discourse.group/docs?topic=41" target="_blank">Introduction to Bluefin</a>.<br>
           <span class="dx-only hidden-fade">Check out <a href="https://universal-blue.discourse.group/docs?topic=39" target="_blank">Introduction to Bluefin DX</a>.<br></span>
           The full list of documentation can be found <a href="https://universal-blue.discourse.group/docs?category=6" target="_blank">here</a>.</span>
+          <img class="dolly" src="./characters/dolly.webp" title="Dolly relaxing near your ISO link"/>
         </span>
       </div>
     </div>
