Add CSS for dolly image

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -50,7 +50,7 @@
         width: 20em;
         height: 3em;
         overflow: hidden;
-        margin-bottom: 15px;
+        margin-bottom: 14.5px;
         margin-top: 5px;
         min-width: 350px;
         overflow:visible;
@@ -165,6 +165,14 @@
         text-decoration: none;
         background-color: rgb(66, 133, 244);
         margin: 0px 10px 15px 0px;
+      }
+
+      .dolly {
+        width: 80%;
+        height: auto;
+        position: relative;
+        margin-top: 30px;
+        bottom: -40px;
       }
 
       @media only screen and (max-width: 830px) {
