Try -> Try Out in navigation

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -144,7 +144,7 @@
 
       #image-builder-result .dolly {
         transform: translateX(0px);
-        transition: transform 0.45s ease-in-out;
+        transition: transform 0.65s ease-out;
       }
 
       #image-builder-result.hidden-fade .dolly {
