Set background color explicitly

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -20,6 +20,10 @@
         src:url(https://projectbluefin.io//fonts/inter-v12-latin-700.woff2) format("woff2")
       }
 
+      body {
+        background-color: #0c1016;
+      }
+
       html * {
         font-family: 'Inter', 'sans-serif';
         color: #fff;
