Hide bottom nav on mobile, fix dolly position on mobile.

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -206,6 +206,11 @@
           margin-bottom: 30px;
           margin-top: 10px;
           width: 100%;
+          min-width: 0px;
+        }
+
+        .dolly {
+          margin-top: 0px;
         }
 
         .sha256,
