--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -348,8 +348,8 @@
           if( imagename !== '' && allSelectionsMade ) {
             jQuery('#image-builder-result').removeClass('hidden-fade').addClass('shown-fade');
             jQuery('#image-builder-result .image-name').text(imagename);
-            jQuery('.button-download').attr('href', 'https://download.projectbluefin.io/' + imagename + '-latest.iso');
-            jQuery('.sha256').attr('href', 'https://download.projectbluefin.io/' + imagename + '-latest-CHECKSUM');
+            jQuery('.button-download').attr('href', 'https://download.projectbluefin.io/' + imagename + '-gts.iso');
+            jQuery('.sha256').attr('href', 'https://download.projectbluefin.io/' + imagename + '-gts-CHECKSUM');
             jQuery('.ghcr-details').attr('href', 'https://ghcr.io/ublue-os/' + imagename);
           } else {
             jQuery('#image-builder-result').addClass('hidden-fade').removeClass('shown-fade');
