--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -255,7 +255,7 @@
             <select id="gpuVendor" name="gpuVendor">
               <option disabled selected value>Select your primary GPU vendor</option>
               <option value="amd">AMD</option>
-              <option value="nvidia">Nvidia</option>
+              <option value="nvidia">Nvidia (GeForce 10 Series+)</option>
               <option value="intel">Intel</option>
             </select>
           </div>
