--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -346,10 +346,15 @@
           });
 
           if( imagename !== '' && allSelectionsMade ) {
+            var isoSuffix = '-gts';
+            if(hardware == 'asus') {
+              isoSuffix = '-latest';
+            }
+
             jQuery('#image-builder-result').removeClass('hidden-fade').addClass('shown-fade');
             jQuery('#image-builder-result .image-name').text(imagename);
-            jQuery('.button-download').attr('href', 'https://download.projectbluefin.io/' + imagename + '-gts.iso');
-            jQuery('.sha256').attr('href', 'https://download.projectbluefin.io/' + imagename + '-gts-CHECKSUM');
+            jQuery('.button-download').attr('href', 'https://download.projectbluefin.io/' + imagename + isoSuffix + '.iso');
+            jQuery('.sha256').attr('href', 'https://download.projectbluefin.io/' + imagename + isoSuffix + '-CHECKSUM');
             jQuery('.ghcr-details').attr('href', 'https://ghcr.io/ublue-os/' + imagename);
           } else {
             jQuery('#image-builder-result').addClass('hidden-fade').removeClass('shown-fade');
