Resize contributor iframe

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript">
       window.addEventListener('load', function () {
         iFrameResize({ log: false }, '#image-picker');
+        iFrameResize({ log: false }, '#contributor-container');
       })
     </script>
   </body>
