Move CSS to scss, fix mobile

--- a/public/contributors.html
+++ b/public/contributors.html
@@ -65,6 +65,13 @@
         z-index: 1;
         filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.2));
       }
+
+      @media only screen and (max-width: 600px) {
+        .github-profile-badge-name-wrapper {
+          display: none;
+          visibility: hidden;
+        }
+      }
     </style>
   </head>
   <body>
