--- a/public/contributors.html
+++ b/public/contributors.html
@@ -33,7 +33,7 @@
           display: flex;
           align-items: center;
           overflow: hidden;
-          background: #1c1c1c;
+          background: #10151f;
           white-space: nowrap;
           align-self: stretch;
           padding-left: 25px;
@@ -66,8 +66,18 @@
         filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.2));
       }
 
+      .github-profile-badge.stargazers svg {
+        display: inline-block;
+        background: #f0f0f0;
+        border-radius: 50%;
+        fill: #958a31;
+        height: 30px;
+        width: 30px;
+        padding: 10px;
+      }
+
       @media only screen and (max-width: 600px) {
-        .github-profile-badge-name-wrapper {
+        .github-profile-badge:not(.stargazers) .github-profile-badge-name-wrapper {
           display: none;
           visibility: hidden;
         }
@@ -82,6 +92,73 @@
     <script type="text/javascript">
       const ignoredContributors = ['github-actions[bot]', 'dependabot[bot]', 'pull[bot]'];
 
+      /**
+       * Lightly modified from:
+       * https://github.com/Rapsssito/github-profile-badge
+       */
+      const BASE_SIZE = 50;
+      const LOGO_SIZE = 20;
+      const LOGO_OFFSET = 5;
+
+      /**
+       * @param {string} username
+       */
+      function getWrapper(username) {
+          const wrapper = document.createElement('a');
+          wrapper.href = `https://github.com/${username}`;
+          wrapper.target = '_blank';
+          wrapper.className = 'github-profile-badge-wrapper';
+          return wrapper;
+      }
+
+      /**
+       * @param {string} username
+       */
+      function getProfile(username) {
+          const profileImg = document.createElement('img');
+          profileImg.src = `https://avatars.githubusercontent.com/${username}`;
+          profileImg.alt = `${username} GitHub Profile`;
+          profileImg.className = 'github-profile-badge-img';
+          return profileImg;
+      }
+
+      /**
+       * @param {string} username
+       */
+      function getImagesDiv(username) {
+          const parentDiv = document.createElement('div');
+          parentDiv.className = 'github-profile-badge-img-wrapper';
+          parentDiv.appendChild(getProfile(username));
+          return parentDiv;
+      }
+
+      /**
+       * @param {string} username
+       */
+      function getNameText(username) {
+          const nameText = document.createElement('p');
+          nameText.className = 'github-profile-badge-name';
+          nameText.innerText = username;
+          return nameText;
+      }
+
+      /**
+       * @param {HTMLElement} widget
+       */
+      function fillWidget(widget) {
+          const username = widget.getAttribute('data-user');
+          const wrapper = getWrapper(username);
+
+          wrapper.appendChild(getImagesDiv(username));
+
+          const nameDiv = document.createElement('div');
+          nameDiv.className = 'github-profile-badge-name-wrapper';
+          const nameText = getNameText(username);
+          nameDiv.appendChild(nameText);
+          wrapper.appendChild(nameDiv);
+          widget.appendChild(wrapper);
+      }
+
       var xhr = new XMLHttpRequest();
       xhr.open('GET', 'https://api.github.com/repos/ublue-os/bluefin/contributors', true);
       xhr.responseType = 'json';
@@ -95,77 +172,26 @@
             }
           });
 
-          /**
-           * Lightly modified from:
-           * https://github.com/Rapsssito/github-profile-badge
-           */
-          const BASE_SIZE = 50;
-          const LOGO_SIZE = 20;
-          const LOGO_OFFSET = 5;
-
-          /**
-           * @param {string} username
-           */
-          function getWrapper(username) {
-              const wrapper = document.createElement('a');
-              wrapper.href = `https://github.com/${username}`;
-              wrapper.target = '_blank';
-              wrapper.className = 'github-profile-badge-wrapper';
-              return wrapper;
-          }
-
-          /**
-           * @param {string} username
-           */
-          function getProfile(username) {
-              const profileImg = document.createElement('img');
-              profileImg.src = `https://avatars.githubusercontent.com/${username}`;
-              profileImg.alt = `${username} GitHub Profile`;
-              profileImg.className = 'github-profile-badge-img';
-              return profileImg;
-          }
-
-          /**
-           * @param {string} username
-           */
-          function getImagesDiv(username) {
-              const parentDiv = document.createElement('div');
-              parentDiv.className = 'github-profile-badge-img-wrapper';
-              parentDiv.appendChild(getProfile(username));
-              return parentDiv;
-          }
-
-          /**
-           * @param {string} username
-           */
-          function getNameText(username) {
-              const nameText = document.createElement('p');
-              nameText.className = 'github-profile-badge-name';
-              nameText.innerText = username;
-              return nameText;
-          }
-
-          /**
-           * @param {HTMLElement} widget
-           */
-          function fillWidget(widget) {
-              const username = widget.getAttribute('data-user');
-              const wrapper = getWrapper(username);
-
-              wrapper.appendChild(getImagesDiv(username));
-
-              const nameDiv = document.createElement('div');
-              nameDiv.className = 'github-profile-badge-name-wrapper';
-              const nameText = getNameText(username);
-              nameDiv.appendChild(nameText);
-              wrapper.appendChild(nameDiv);
-              widget.appendChild(wrapper);
-          }
-
           const widgets = document.getElementsByClassName('github-profile-badge');
           for (let i = 0; i < widgets.length; i++) {
               fillWidget(widgets[i]);
           }
+
+          var xhr2 = new XMLHttpRequest();
+          xhr2.open('GET', 'https://api.github.com/repos/ublue-os/bluefin', true);
+          xhr2.responseType = 'json';
+          xhr2.onload = function() {
+            if (xhr2.status === 200) {
+              var data = xhr2.response;
+              var stargazersCount = Intl.NumberFormat('en-US', {
+                notation: "compact",
+                maximumFractionDigits: 1
+              }).format(data['stargazers_count']);
+
+              document.getElementById('contributor-container').innerHTML += '<div class="github-profile-badge stargazers"><a href="https://github.com/ublue-os/bazzite/stargazers" target="_blank" class="github-profile-badge-wrapper"><div class="github-profile-badge-img-wrapper"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg></div><div class="github-profile-badge-name-wrapper"><p class="github-profile-badge-name">' + stargazersCount.toLowerCase() + ' Stargazers</p></div></a></div>';
+            }
+          }
+          xhr2.send();
         };
       }
       xhr.send();
