--- a/public/contributors.html
+++ b/public/contributors.html
@@ -49,7 +49,7 @@
           color: white;
           margin: 0;
           padding: 0;
-          margin-left: 5px;
+          margin-left: 10px;
           margin-right: 10px;
       }
 
@@ -66,7 +66,7 @@
         filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.2));
       }
 
-      .github-profile-badge.stargazers svg {
+      .github-profile-badge.always-expanded svg {
         display: inline-block;
         background: #f0f0f0;
         border-radius: 50%;
@@ -74,6 +74,14 @@
         height: 30px;
         width: 30px;
         padding: 10px;
+      }
+
+      .github-profile-badge.stargazers svg {
+        fill: #b9a500;
+      }
+
+      .github-profile-badge.pulls svg {
+        fill: #4285f4;
       }
 
       @media only screen and (max-width: 600px) {
@@ -188,7 +196,32 @@
                 maximumFractionDigits: 1
               }).format(data['stargazers_count']);
 
-              document.getElementById('contributor-container').innerHTML += '<div class="github-profile-badge stargazers"><a href="https://github.com/ublue-os/bluefin/stargazers" target="_blank" class="github-profile-badge-wrapper"><div class="github-profile-badge-img-wrapper"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg></div><div class="github-profile-badge-name-wrapper"><p class="github-profile-badge-name">' + stargazersCount.toLowerCase() + ' Stargazers</p></div></a></div>';
+              document.getElementById('contributor-container').innerHTML += '<div class="github-profile-badge always-expanded stargazers"><a href="https://github.com/ublue-os/bluefin/stargazers" target="_blank" class="github-profile-badge-wrapper"><div class="github-profile-badge-img-wrapper"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg></div><div class="github-profile-badge-name-wrapper"><p class="github-profile-badge-name">' + stargazersCount.toLowerCase() + ' Stargazers</p></div></a></div>';
+
+              var xhr3 = new XMLHttpRequest();
+              xhr3.open('GET', 'https://storage.googleapis.com/ghp-stats/ublue-os/data.json', true);
+              xhr3.responseType = 'json';
+              xhr3.onload = function() {
+                if (xhr3.status === 200) {
+                  var totalPulls = 0;
+                  var data = xhr3.response
+                  var lastData = data[Object.keys(data)[Object.keys(data).length - 1]];
+
+                  Object.keys(lastData).forEach(function(key) {
+                    if (key.indexOf("bluefin") !== -1) {
+                      totalPulls += lastData[key];
+                    }
+                  });
+
+                  var pullCount = Intl.NumberFormat('en-US', {
+                    notation: "compact",
+                    maximumFractionDigits: 1
+                  }).format(totalPulls);
+
+                  document.getElementById('contributor-container').innerHTML += '<div class="github-profile-badge always-expanded pulls"><a href="https://github.com/orgs/ublue-os/packages?repo_name=bluefin" target="_blank" class="github-profile-badge-wrapper"><div class="github-profile-badge-img-wrapper"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M264.5 5.2c14.9-6.9 32.1-6.9 47 0l218.6 101c8.5 3.9 13.9 12.4 13.9 21.8s-5.4 17.9-13.9 21.8l-218.6 101c-14.9 6.9-32.1 6.9-47 0L45.9 149.8C37.4 145.8 32 137.3 32 128s5.4-17.9 13.9-21.8L264.5 5.2zM476.9 209.6l53.2 24.6c8.5 3.9 13.9 12.4 13.9 21.8s-5.4 17.9-13.9 21.8l-218.6 101c-14.9 6.9-32.1 6.9-47 0L45.9 277.8C37.4 273.8 32 265.3 32 256s5.4-17.9 13.9-21.8l53.2-24.6 152 70.2c23.4 10.8 50.4 10.8 73.8 0l152-70.2zm-152 198.2l152-70.2 53.2 24.6c8.5 3.9 13.9 12.4 13.9 21.8s-5.4 17.9-13.9 21.8l-218.6 101c-14.9 6.9-32.1 6.9-47 0L45.9 405.8C37.4 401.8 32 393.3 32 384s5.4-17.9 13.9-21.8l53.2-24.6 152 70.2c23.4 10.8 50.4 10.8 73.8 0z"/></svg></div><div class="github-profile-badge-name-wrapper"><p class="github-profile-badge-name">' + pullCount.toLowerCase() + ' Image Pulls</p></div></a></div>';
+                }
+              }
+              xhr3.send();
             }
           }
           xhr2.send();
