--- a/public/contributors.html
+++ b/public/contributors.html
@@ -85,7 +85,7 @@
       }
 
       @media only screen and (max-width: 600px) {
-        .github-profile-badge:not(.stargazers) .github-profile-badge-name-wrapper {
+        .github-profile-badge:not(.always-expanded) .github-profile-badge-name-wrapper {
           display: none;
           visibility: hidden;
         }
