--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -199,6 +199,10 @@
           margin-top:30px;
         }
 
+        .button_label .image-name {
+          display: none;
+        }
+
         .select {
           left: 0;
           right: 0;
