Revert "Update image-picker.html"

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -352,7 +352,7 @@
           if( imagename !== '' && allSelectionsMade ) {
             var isoSuffix = '-gts';
             if(hardware == 'asus') {
-              isoSuffix = '-stable';
+              isoSuffix = '-latest';
             }
 
             jQuery('#image-builder-result').removeClass('hidden-fade').addClass('shown-fade');
