--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -247,7 +247,7 @@
           <label for="isDeveloper">Are you a developer?</label>
           <div class="select">
             <select id="isDeveloper" name="isDeveloper">
-              <option disabled selected value>Select if you want developer tools included</option>
+              <option disabled selected value>Include developer cloud-native developer tooling</option>
               <option value="yes">Yes</option>
               <option value="no">No</option>
             </select>
