--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -279,10 +279,9 @@
             <a class="sha256" title="Verify (SHA256)"><i class="fas fa-file"><i class="fas fa-check"></i></i></a>
             <a class="ghcr-details" title="View details on the GitHub Container registry" href="https://github.com/orgs/ublue-os/packages?repo_name=bluefin" target="_blank"><i class="fas fa-box-open"></i></a>
           </div>
-          <span class="fine-print">Check out the <a href="https://docs.projectbluefin.io/introduction" target="_blank">Introduction to Bluefin</a>.<br>
-          <span class="dx-only hidden-fade">Check out <a href="https://docs.projectbluefin.io/bluefin-dx" target="_blank">Introduction to Bluefin DX</a>.<br></span>
-          The full list of documentation can be found <a href="https://docs.projectbluefin.io/" target="_blank">here</a>.</span>
-          <img class="dolly" src="./characters/dolly.webp" title="Dolly relaxing near your ISO link"/>
+          <span class="fine-print">Check out the <a href="https://docs.projectbluefin.io/" target="_blank">Bluefin Documentation</a>.<br>
+          <span class="dx-only hidden-fade">Check out <a href="https://docs.projectbluefin.io/bluefin-dx" target="_blank">Introduction to Bluefin DX</a>.<br></span></span>
+          <img class="dolly" src="./characters/dolly.webp" title="Dolly chilling near your ISO link"/>
         </span>
       </div>
     </div>
