--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -279,7 +279,7 @@
             <a class="sha256" title="Verify (SHA256)"><i class="fas fa-file"><i class="fas fa-check"></i></i></a>
             <a class="ghcr-details" title="View details on the GitHub Container registry" href="https://github.com/orgs/ublue-os/packages?repo_name=bluefin" target="_blank"><i class="fas fa-box-open"></i></a>
           </div>
-          <span class="fine-print">Check out the <a href="https://docs.projectbluefin.io/" target="_blank">Bluefin Documentation</a>, it takes about 15 minutes.<br>
+          <span class="fine-print">Check out the <a href="https://docs.projectbluefin.io/" target="_blank">Bluefin Documentation</a>, it takes about 15 minutes and includes an installation runbook - set yourself up for success, you are headed into a new world.<br>
           <span class="dx-only hidden-fade">Check out <a href="https://docs.projectbluefin.io/bluefin-dx" target="_blank">Introduction to Bluefin DX</a>.<br></span></span>
           <img class="dolly" src="./characters/dolly.webp" title="Dolly chilling near your ISO link"/>
         </span>
