update wording in image picker

--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -265,14 +265,14 @@
           </div>
         </div>
         <div class="gts hidden-fade">
-          <label for="isGts">How stable do you want?</label>
+          <label for="isGts">How much stability would you like?</label>
           <div class="select">
             <select id="isGts" name="isGts">
               <option disabled selected value>
-                Select your desired stability
+                Select your update stream
               </option>
-              <option value="stable">F41: Stable</option>
-              <option value="gts">F40: Supa Stable GTS</option>
+              <option value="gts">Bluefin GTS (for New Users, based on Fedora 40)</option>
+              <option value="stable">Bluefin (or Enthusiasts, based on Fedora 41)</option>
             </select>
           </div>
         </div>
