--- a/public/image-picker.html
+++ b/public/image-picker.html
@@ -271,8 +271,8 @@
               <option disabled selected value>
                 Select your update stream
               </option>
-              <option value="gts">Bluefin GTS (for New Users, based on Fedora 40)</option>
-              <option value="stable">Bluefin (or Enthusiasts, based on Fedora 40)</option>
+              <option value="gts">Bluefin GTS (for Most Users, based on Fedora 40)</option>
+              <option value="stable">Bluefin (for Enthusiasts, based on Fedora 40)</option>
             </select>
           </div>
         </div>
