--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="title" content="Bluefin">
     <meta name="description" content="The next generation cloud-native Linux workstation, designed for reliability, performance, and sustainability.">
-    <meta name="keywords" content="linux, gnome, fedora, ubuntu, cloudnative">
+    <meta name="keywords" content="linux, gnome, cloudnative, podman, docker">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="author" content="The Bluefin Project">
