fix: use iframe-resizer from npm

--- a/index.html
+++ b/index.html
@@ -31,18 +31,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="manifest" href="/favicons/site.webmanifest">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.4.4/iframeResizer.min.js" integrity="sha512-1kzh/Anfk2sgEpyhmB42Lnofhj2VpoGY/WTVdPTNrF7ls2zZQwy1aDAB6uc2ezsAjaoGmM2JMYo7R+g1oZeNaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="text/javascript" src="https:///universal-blue.discourse.group/javascripts/embed-topics.js"></script>
-    <script async src="https://analytics.eu.umami.is/script.js" data-website-id="6f6ea63d-01c2-4539-b84b-fd455210ddcf"></script>
+    <!-- Doesnt seem to even work anymore -->
+    <!-- <script async src="https://analytics.eu.umami.is/script.js" data-website-id="6f6ea63d-01c2-4539-b84b-fd455210ddcf"></script> -->
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <script type="text/javascript">
-      window.addEventListener('load', function () {
-        iFrameResize({ log: false }, '#image-picker');
-        iFrameResize({ log: false }, '#contributor-container');
-      })
-    </script>
   </body>
 </html>
