fix: oh my god please just fix this damn image picker

--- a/public/contributors.html
+++ b/public/contributors.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script
-      src="/node_modules/@iframe-resizer/child/index.umd.js"
-      type="text/javascript"
-      async
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.4.4/iframeResizer.contentWindow.min.js" integrity="sha512-IWwZFBvHzN41wNI6etRLLuLrDDj/6AwJcPt7cmKJAzluYTIHHQ1PF8wh0rSy05jxEvvjflVvH2MxeV6riyEEXg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
       #contributor-container {
         display: flex;
