feat: proper integrity for iframe

--- a/public/contributors.html
+++ b/public/contributors.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/@iframe-resizer/child@5.3.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@iframe-resizer/child@5.3.2" integrity="z4PhNX7vuL3xVChQ1m2AB9Yg5AULVxXcg/SpIdNs6c5H0NE8XYXysP+DGNKHfuwvY7kxvUdBeoGlODJ6+SfaPg=="></script>
     <style>
       #contributor-container {
         display: flex;
